# point-cloud

cgal/: CMakeLists.txt  README.md  preprocessing.cpp  run.sh
cgal/samples/: _log.txt
